--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ http://www.templatemo.com/tm-515-eatery
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#">Order Now! <i class="fa fa-phone"></i>https://wa.me/2348148058602?text=Gud%20Day%20Foodiefy,%20I%20would%20like%20to%20order%20a%20dish</a></li>
+                         <li><a href="https://wa.me/2348148058602?text=Gud%20Day%20Foodiefy,%20I%20would%20like%20to%20order%20a%20dish">Order Now! <i class="fa fa-phone"></i></a></li>
                          <a href="#footer" class="section-btn">Reserve a table</a>
                     </ul>
                </div>
@@ -538,4 +538,5 @@ http://www.templatemo.com/tm-515-eatery
      <script src="js/custom.js"></script>
 
 </body>
+
 </html>
