--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ http://www.templatemo.com/tm-515-eatery
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="https://wa.me/2348148058602?text=Gud%20Day%20Foodiefy,%20I%20would%20like%20to%20order%20a%20dish">Order Now! <i class="fa fa-phone"></i></a></li>
+                         <li><a href="#
+								 ">Order Now! <i class="fa fa-phone"></i></a></li>
                          <a href="#footer" class="section-btn">Reserve a table</a>
                     </ul>
                </div>
@@ -540,3 +541,4 @@ http://www.templatemo.com/tm-515-eatery
 </body>
 
 </html>
+
